<resources>
    <string name="app_name">FoodDash</string>
    <string name="register_restuarant">Register Restaurant</string>
    <string name="add_item_button">Add item</string>

    <string name="restaurant_name">Restaurant name</string>
    <string name="restaurant_logo_url">Restaurant logo url</string>
    <string name="restaurant_type">Restaurant type</string>
    <string name="restaurant_open">Opening time</string>
    <string name="restaurant_close">Closing time</string>
    <string name="restaurant_address">Restaurant address</string>
    <string name="restaurant_button">Register Restaurant</string>

    <string name="api_key">AIzaSyD5HzRLmQUQ6zAgoewD97l6QTuakyAjHEs</string>

</resources>